--- a/js9archive.html
+++ b/js9archive.html
@@ -62,6 +62,7 @@
 	    }
 
 	    var survey = form.survey.options[form.survey.selectedIndex].value.split(":")
+	    var source = form.survey.options[form.survey.selectedIndex].innerHTML
 	    var server = Surveys[survey[0]]
 	    
 	    survey = survey[1]
@@ -80,6 +81,7 @@
 				    , r: form.ra.value, d: form.dec.value
 				    , c: form.gzip.checked
 				    , s: survey
+				    , source : source
 
 				    , proxy: form.proxy.checked
 				  }
@@ -128,10 +130,11 @@
 	saoDSS = new ImageService({
 	      url: "http://www.cfa.harvard.edu/archive/dss?r={r}&d={d}&w={w}&h={h}&e={e}&c={c}"
 	    , calc: function(values) {
+		    values.c = false
 		    if ( values.c ) {
 			values.c = "gzip"
 		    }
-		    values.name = values.name + "-DSS1";
+		    values.name = values.name + " " + values.source;
 		}
 	})
 
@@ -143,7 +146,7 @@
 		    } else {
 			values.c = "none"
 		    }
-		    values.name = values.name + values.s;
+		    values.name = values.name + " " + values.source;
 		}
 	})
 
@@ -155,7 +158,7 @@
 		    } else {
 			values.c = "application/x-fits"
 		    }
-		    values.name = values.name + " " + values.s;
+		    values.name = values.name + " " + values.source;
 		}
 	})
 
@@ -163,7 +166,7 @@
 	      url: "http://irsa.ipac.caltech.edu/cgi-bin/Oasis/2MASSImg/nph-2massimg?objstr={r},{d}&size={radius}&band={s}"
 	    , calc: function(values) {
 		    values.radius = Math.floor(Math.sqrt(values.w*values.w+values.h*values.h)*60)
-		    values.name = values.name + " " + values.s;
+		    values.name = values.name + " " + values.source;
 		}
 	})
 
@@ -171,7 +174,7 @@
 	      url: "http://skys.gsfc.nasa.gov/cgi-bin/images?VCOORD={ra},{dec}&SURVEY={s}&SFACTR={size}&RETURN=FITS"
 	    , calc: function(values) {
 		    values.size = Math.floor((values.w+values.h)/2)
-		    values.name = values.name + " " + values.s;
+		    values.name = values.name + " " + values.source;
 		}
 	})
 
