--- a/js9archive.html
+++ b/js9archive.html
@@ -99,6 +99,7 @@
 			    , r: form.ra.value, d: form.dec.value
 			    , c: form.gzip.checked
 			    , s: survey
+			    , source : source
 
 			    , proxy: form.proxy.checked
 			  }
