remove all html

--- a/js9archive.html
+++ b/js9archive.html
@@ -34,69 +34,6 @@
     <div class="JS9"></div>
 
         <br>
-	<form id="archive-box">
-
-
-	Image archive : <select name=service>
-			<optgroup label="Image Archive Services">
-			<option value=saoDSS>SAO DSS1</option>
-			<optgroup label="StSci DSS">
-			    <option value=stsDSS:poss2ukstu_ir>StSci DSS2 Infrared</option>
-			    <option value=stsDSS:poss2ukstu_red>StSci DSS2 Red</option>
-			    <option value=stsDSS:poss2ukstu_blue>StSci DSS2 Blue</option>
-			    <option value=stsDSS:poss1_red>StSci DSS1 Red</option>
-			    <option value=stsDSS:poss1_blue>StSci DSS1 Blue</option>
-			</optgroup>
-			<optgroup label="ESO DSS">
-			    <option value=esoDSS:DSS2-infrared>ESO DSS2 Infrared</option>
-			    <option value=esoDSS:DSS2-red>ESO DSS2 Red</option>
-			    <option value=esoDSS:DSS2-blue>ESO DSS2 Blue</option>
-			    <option value=esoDSS:DSS1>ESO DSS1</option>
-			</optgroup>
-			<optgroup label="IPAC 2mass">
-			    <option value=ipac2m:j>IPAC 2Mass J</option>
-			    <option value=ipac2m:h>IPAC 2Mass H</option>
-			    <option value=ipac2m:k>IPAC 2Mass K</option>
-			</optgroup>
-
-<!--
-			<optgroup label="HEASARC SkyView">
-			    <option value=skyvew:sdssi>SkyView SDSS i</option>
-			    <option value=skyvew:sdssr>SkyView SDSS r</option>
-			    <option value=skyvew:sdssg>SkyView SDSS g</option>
-			    <option value=skyvew:sdssu>SkyView SDSS u</option>
-			    <option value=skyvew:sdssz>SkyView SDSS z</option>
---!>
-			</optgroup>
-			</optgroup>
-			<optgroup label="Image Archive Services">
-			<optgroup label="SAO">
-			    <option value=saoCat:gsc2>SAO gsc2</option>
-			    <option value=saoCat:tmc>SAO 2mass</option>
-			</optgroup>
-			</optgroup>
-			</select>
-			<p>
-
-	<table>
-	<tr><td> Object: </td> <td> <input type=text name=object size=10> </td>
-	    <td></td>
-	    <td></td>
-	    <td> <input type=button value=Go onclick='ServiceGo()'> </td>
-	    <td>&nbsp;&nbsp;</td>
-	    <td> <input type=checkbox name=gzip> Use Compression</td>
-	</tr>
-	<tr><td> RA:  	</td><td>	<input type=text name=ra	size=10> </td>
-	    <td> Dec: 	</td><td>	<input type=text name=dec	size=10> </td>
-	    <td> <input type=button value=Get onclick='GetRADec()'> </td>
-	    <td></td>
-	    <td> <input type=checkbox name=proxy checked> Use CORS Proxy</td>
-	<tr><td> Width: </td><td>	<input type=text name=width	size=10 value=15> </td>
-	    <td> Height: </td><td>	<input type=text name=height	size=10 value=15> </td>
-	</tr>
-	</tr>
-	<tr><td colspan=6><span id=status></span></td></tr>
-
-	</form>
+	<div  id="JS9Archive">
     </body>
 </html>
