Reduce js9archive to single file load

--- a/js9archive.html
+++ b/js9archive.html
@@ -26,7 +26,7 @@
 
       <script>
       JS9.Plugins = []
-      JS9.RegisterPlugin = function (func, cls) {
+      JS9.RegisterPlugin = function (cls, func) {
 	  JS9.Plugins.push({ init: func, cls: cls})
       }
 
@@ -43,11 +43,7 @@
       });
       </script>
 
-      <script type="text/javascript" src="js/archive/subst.js"></script>
-      <script type="text/javascript" src="js/archive/starbase.js"></script>
-      <script type="text/javascript" src="js/archive/archive.js"></script>
-      <script type="text/javascript" src="js/archive/image-services.js"></script>
-      <script type="text/javascript" src="js/archive/catalog-services.js"></script>
+      <script type="text/javascript" src="js/archive/js9archive.js"></script>
 
     </head>
     <body>
