--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 <body>
 <h3>Archives & Catalog Retrieval</h3>
 
-The Archives & Catalog Retrieval dialog allows access to remote image and star
+The Archives & Catalog Retrieval plugin allows access to remote image and star
 catalod services.
 
 <p>
@@ -17,8 +17,9 @@ If the <b>Object</b> field is not blank the retrieval will try to convert the
 object name to an RA and Dec before placing a query.
 
 <p>
-If an image is already loaded in to the JS9 frame, the <b>Set RA/Dec</b> button
-will retrieve the field center and size from the image and fill in the dailog's
-form fields.
+If an image is already loaded into JS9, the <b>Set RA/Dec</b> button
+can be used to retrieve the field center and size from the image and
+fill in the dialog's form fields.
+
 
 
