Fixes + change included file to archive.js

--- a/js9archive.html
+++ b/js9archive.html
@@ -31,7 +31,7 @@
     <li> <a href='javascript:JS9.Load("png/i1000.png", {scale:"linear", colormap:"grey", display:"nop"});'>i1000 (v=x*1000+y)</a>
     </ul>
 
-      <script type="text/javascript" src="plugins/archive/js9archive.js"></script>
+      <script type="text/javascript" src="plugins/archive/archive.js"></script>
     </head>
     <body>
     <div class="JS9Menubar"></div>
