Last minute changes

--- a/js9archive.html
+++ b/js9archive.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,16 +25,15 @@
       <script type="text/javascript" src="js/astrolib.js"></script>
       <script type="text/javascript" src="js9.js"></script>
 
-    <ul>
-    <li> <a href='javascript:JS9.Load("png/casa.png", "nop");'>CAS-A (Chandra)</a>
-    <li> <a href='javascript:JS9.Load("png/snr.png", {colormap:"heat", display:"nop"});'>CTB 109 (Einstein)</a>
-    <li> <a href='javascript:JS9.Load("png/m13.png", {scale:"linear", colormap:"sls", display:"nop"});'>m13 (via SkyView)</a>
-    <li> <a href='javascript:JS9.Load("png/i1000.png", {scale:"linear", colormap:"grey", display:"nop"});'>i1000 (v=x*1000+y)</a>
-    </ul>
-
       <script type="text/javascript" src="plugins/archive/archive.js"></script>
     </head>
     <body>
+    <ul>
+    <li> <a href='javascript:JS9.Load("png/casa.png");'>CAS-A (Chandra)</a>
+    <li> <a href='javascript:JS9.Load("png/snr.png", {colormap:"heat"});'>CTB 109 (Einstein)</a>
+    <li> <a href='javascript:JS9.Load("png/m13.png", {scale:"linear", colormap:"sls"});'>m13 (via SkyView)</a>
+    <li> <a href='javascript:JS9.Load("png/i1000.png", {scale:"linear", colormap:"grey"});'>i1000 (v=x*1000+y)</a>
+    </ul>
     <div class="JS9Menubar"></div>
     <div class="JS9"></div>
     </body>
