--- a/js9archive.html
+++ b/js9archive.html
@@ -1,29 +1,29 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" > 
-      <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-      <link type="text/css" rel="stylesheet" href="css/jquery.contextMenu.css">
-      <link rel="stylesheet" href="css/dhtmlwindow.css" type="text/css">
-      <link type="text/css" rel="stylesheet" href="js9.css">
-      <script type="text/javascript" src="js/jquery.min.js"></script>
-      <script type="text/javascript" src="js/kinetic.min.js"></script>
-      <script type="text/javascript" src="js/jquery.contextMenu.min.js"></script>
-      <script type="text/javascript" src="js/jquery.flot.min.js"></script>
-      <script type="text/javascript" src="js/jquery.flot.errorbars.min.js"></script>
-      <script type="text/javascript" src="js/sprintf.min.js"></script>
-      <script type="text/javascript" src="js/dhtmlwindow.min.js">
-      /***********************************************
-      * DHTML Window Widget- © Dynamic Drive (www.dynamicdrive.com)
-      * This notice must stay intact for legal use.
-      * Visit http://www.dynamicdrive.com/ for full source code
-      ***********************************************/
-      </script>
-
-      <script type="text/javascript" src="js/fitsy.js"></script>
-      <script type="text/javascript" src="js/astrolib.js"></script>
-      <script type="text/javascript" src="js9.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" > 
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+  <link type="text/css" rel="stylesheet" href="css/jquery.contextMenu.css">
+  <link rel="stylesheet" href="css/dhtmlwindow.css" type="text/css">
+  <link type="text/css" rel="stylesheet" href="js9.css">
+  <link type="text/css" rel="stylesheet" href="plugins/plugintest.css">
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.contextMenu.min.js"></script>
+  <script type="text/javascript" src="js/jquery.flot.min.js"></script>
+  <script type="text/javascript" src="js/jquery.flot.errorbars.min.js"></script>
+  <script type="text/javascript" src="js/sprintf.min.js"></script>
+  <script type="text/javascript" src="js/dhtmlwindow.min.js">
+  /***********************************************
+  * DHTML Window Widget- © Dynamic Drive (www.dynamicdrive.com)
+  * This notice must stay intact for legal use.
+  * Visit http://www.dynamicdrive.com/ for full source code
+  ***********************************************/
+  </script>
+  <script type="text/javascript" src="js/fabric.js"></script>
+  <script type="text/javascript" src="plugins/fitsy/fitsy.js"></script>
+  <script type="text/javascript" src="js/astrolib.js"></script>
+  <script type="text/javascript" src="js9.js"></script>
 
       <script type="text/javascript" src="plugins/archive/archive.js"></script>
     </head>
