forward compatible fitsy

--- a/js9archive.html
+++ b/js9archive.html
@@ -21,6 +21,7 @@
   ***********************************************/
   </script>
   <script type="text/javascript" src="js/fabric.js"></script>
+  <xscript type="text/javascript" src="js/fitsy.js"></script>
   <script type="text/javascript" src="plugins/fitsy/fitsy.js"></script>
   <script type="text/javascript" src="js/astrolib.js"></script>
   <script type="text/javascript" src="js9.js"></script>
