--- a/archive.html
+++ b/archive.html
@@ -1,5 +1,14 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
+<head> 
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<link type="text/css" rel="stylesheet" href="../../js9.css">
+<title>JS9 Archives and Catalogs Plugin</title>
+</head>
 <body>
+<div class="helpLogo"><img src="../../images/js9logo.png" alt="js9"></div>
+<div class="helpContainer">
 <h3>Archives & Catalog Retrieval</h3>
 
 The Archives & Catalog Retrieval plugin provides access to remote
@@ -32,3 +41,6 @@ loaded directly into the JS9 display.  Catalogs will be loaded on top
 of the currently displayed image (so obviously, you need to have the
 appropriate image displayed in JS9 before overlaying a catalog).
 
+</div>
+</body>
+</html>
